--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-   <h1>esta es la pagina de jhon p</h1> 
-   <h1>este cambio es la version dos </h1>
+  </head>
+  <body>
+    <h1>esta es la pagina de jhon p</h1>
+    <h1>este cambio es la version dos</h1>
 
-   <h2>Debes tener este nombre : Miguel Ramirez</h2>
-</body>
+    <h2>Debes tener este nombre : Miguel Ramirez</h2>
+  </body>
 </html>
